[gd_scene load_steps=3 format=3 uid="uid://dgaq2j7gq3v0c"]

[ext_resource type="Theme" uid="uid://b4qxgy6oyosdc" path="res://scenes/ranch/ui/panels/hUD.tres" id="1_0i5ci"]
[ext_resource type="Script" uid="uid://di8nfastuqsqy" path="res://scripts/ranch/ui/panels/OrdersPanel.gd" id="1_wke2m"]

[node name="OrdersPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0i5ci")
script = ExtResource("1_wke2m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLabel"
text = "Orders and Jobs"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OrdersTab" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_title = "Orders"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/OrdersTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="OrderListContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/OrdersTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshOrdersButton" type="Button" parent="VBoxContainer/TabContainer/OrdersTab"]
layout_mode = 2
text = "Refresh Orders"

[node name="JobsTab" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
tab_title = "Jobs"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/TabContainer/JobsTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="JobListContainer" type="VBoxContainer" parent="VBoxContainer/TabContainer/JobsTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RefreshJobsButton" type="Button" parent="VBoxContainer/TabContainer/JobsTab"]
layout_mode = 2
text = "Refresh Jobs"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Close"

[connection signal="pressed" from="VBoxContainer/TabContainer/OrdersTab/RefreshOrdersButton" to="." method="_on_refresh_orders_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TabContainer/JobsTab/RefreshJobsButton" to="." method="_on_refresh_jobs_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
